<resources>
    <string name="app_name">eStore</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="error_invalid_sms_code">sample_error_message</string>
    <string name="error_unknown_error">Unknown error.</string>
    <string name="error_timeout">Pure network.</string>
    <string name="error_network_error">Error while connecting.</string>
    <string name="menu_brows">Browse</string>
    <string name="menu_settings">Settings</string>
    <string name="main_hint_search">I am shopping for …</string>
    <string name="browse_type_popular">Popular</string>
    <string name="browse_type_recently_viewed">Recently viewed</string>
    <string name="float_currency">$%.2f</string>
    <string name="int_percent">%d%%</string>
    <string name="browse_msg_almost_gone">Almost gone!</string>
    <string name="details_title">Details</string>
    <string name="details_tab_overview">Overview</string>
    <string name="details_tab_related">Related</string>
    <string name="content_msg_buy">Buy</string>
    <string name="details_msg_store_reviews">Store Reviews</string>
    <string name="details_msg_view_all_store_reviews">View All</string>
    <string name="details_no_reviews">No reviews</string>
    <string name="details_msg_sold_by">Sold By</string>
    <string name="details_msg_store_rating">Store Rating</string>
    <string name="breck_int_breck">(%d)</string>
    <string name="rating_value">%.1f</string>
    <string name="details_msg_item_added_to_cart">Item Added to Cart</string>
    <string name="you_saved_double_currency">You saved %.2f USD</string>
    <string name="cart_title">Cart</string>
    <string name="cart_msg_items_in_cart">Items in Cart</string>
    <string name="cart_msg_ship_to">Ship to</string>
    <string name="cart_msg_pay_with">Pay with</string>
    <string name="cart_msg_order_summary">Order Summary</string>
    <string name="cart_msg_item_total">Item Total</string>
    <string name="cart_msg_shipping">Shipping</string>
    <string name="cart_msg_order_total">Order Total</string>
    <string name="cart_msg_terms_of_use_and_privacy_policy">By pressing \"Checkout\" you agree to the Terms of Use and Privacy Policy.</string>
    <string name="cart_msg_checkout">Checkout</string>
    <string name="cart_msg_shipping_semicolon">Shipping:</string>
    <string name="strike_float_currency"><![CDATA[<strike>$%.2f</strike>]]></string>
    <string name="str_coma_str">%s, %s</string>
    <string name="cart_msg_select_quantity">Select Quantity</string>
    <string name="cart_msg_remove_this_time">Remove this item from cart?</string>
    <string name="cart_msg_remove">Remove</string>
    <string name="cart_msg_checkout_success">Your order is on the way!</string>
    <string name="main_msg_view_profile">View profile</string>
    <string name="cart_msg_shipping_and_payment">Shipping and Payment</string>
</resources>
