<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/store_review_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/section_store_reviews"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorLightGray"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_store_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/details_msg_store_reviews"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_view_all_store_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/details_msg_view_all_store_reviews"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_no_store_reviews"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"
            android:text="@string/details_no_reviews"
            android:textColor="#666"
            android:visibility="gone" />

        <include
            android:id="@+id/loading_reviews"
            layout="@layout/item_loading_account" />

    </FrameLayout>

</LinearLayout>