<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_item_total_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/cart_msg_item_total"
        app:layout_constraintEnd_toStartOf="@id/tv_item_total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_item_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_item_total_msg"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="$4.00" />

    <TextView
        android:id="@+id/tv_shipping_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/cart_msg_shipping"
        app:layout_constraintEnd_toStartOf="@id/tv_shipping_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_item_total_msg" />

    <TextView
        android:id="@+id/tv_shipping_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_shipping_msg"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="$1.00" />

    <TextView
        android:id="@+id/tv_order_total_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/cart_msg_order_total"
        app:layout_constraintEnd_toStartOf="@id/tv_order_total_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_shipping_msg" />

    <TextView
        android:id="@+id/tv_order_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_order_total_msg"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="$5.00" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorLightGray"
        app:layout_constraintTop_toBottomOf="@id/tv_order_total_msg" />

    <TextView
        android:id="@+id/tv_terms_of_use_and_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:text="@string/cart_msg_terms_of_use_and_privacy_policy"
        android:textColor="@color/colorTextDisabled"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>