<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/items_in_cart_section"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorLightGray"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/tv_shopping_payment_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/cart_msg_shipping_and_payment"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_ship_to"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/items_in_cart_section"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/tv_ship_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/cart_msg_ship_to"
            android:textColor="#96ADB7" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:textColor="@color/colorAccent"
            tools:text="Address 25/2" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorLightGray"
        app:layout_constraintTop_toBottomOf="@id/item_ship_to" />

    <LinearLayout
        android:id="@+id/item_payment"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/item_ship_to">

        <TextView
            android:id="@+id/tv_pay_with"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:text="@string/cart_msg_pay_with"
            android:textColor="#96ADB7" />

        <TextView
            android:id="@+id/tv_payment_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:drawableEnd="@drawable/ic_chevron_right"
            android:textColor="@color/colorAccent"
            tools:text="VISA 45**" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>